test/interaction/Issue7402.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : (A → A) → A _8 : (A → A) → A [ at Issue7402.agda:7.18-19 ] ———— Error ————————————————————————————————————————————————— error: [UnsolvedConstraints] Failed to solve the following constraints: _8 (y = x) h = h x : A (blocked on _8)" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue7402.agda:7.7-20: error: [UnequalTerms] x != h x of type A when checking that the expression f (λ y → P ?) has type P (λ h → h x)" nil)
((last . 3) . (agda2-maybe-goto '("Issue7402.agda" . 108)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
